--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <ul class="feature-items mx-auto flex wrap justify-content-space-between">
         <li class="feature-item text-center">
-          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_drawing.svg" />
+          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_drawing.svg" alt="drawning-icon" />
           <h3 class="feature-title heading-3">OpenType features Variable fonts</h3>
           <p class="feature-text text-paragraph">Slate helps you see how 
             many more days you need 
@@ -100,7 +100,7 @@
             financial goal.</p>
         </li>
         <li class="feature-item text-center">
-          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_draw.svg" />
+          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_draw.svg" alt="draw-icon" />
           <h3 class="feature-title heading-3">Design with real data</h3>
           <p class="feature-text text-paragraph">Slate helps you see how 
             many more days you need 
@@ -108,7 +108,7 @@
             financial goal.</p>
         </li>
         <li class="feature-item text-center">
-          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_brush.svg" />
+          <img class="feature-icon" width="61px" height="61px" src="./img/mdi_brush.svg" alt="brush-icon" />
           <h3 class="feature-title heading-3">Fastest way to take action</h3>
           <p class="feature-text text-paragraph">Slate helps you see how 
             many more days you need 
@@ -140,7 +140,7 @@
       </div>
     </section>
     <section>
-      
+
     </section>
   </body>
 </html>
